js/js.translator/testData/incremental/invalidation/fakeOverrideInlinePropertyWithCrossModuleInliner/lib1/l1.2.kt
abstract class AbstractClassA {
    inline val propertyWithGetter: String
        get() = "1"

    inline var propertyWithSetter: String
        get() = savedStr
        set(str) {
            savedStr = "$str 2"
        }

    var savedStr = "empty"
}
